# photo-restore

./: .gitignore  README.md  render.yaml  requirements.txt
backend/: .env.example  Procfile  pyproject.toml  requirements.txt
backend/backend/: settings.py  urls.py
backend/photo_restore/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/photo_restore/migrations/: 0001_initial.py  0002_photorestore_delete_photo.py  0003_photorestore_restored_image_and_more.py
backend/restore/: settings.py  urls.py  wsgi.py
backend/users/: admin.py  models.py  serializers.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.tsx  theme.ts  types.d.ts
frontend/src/components/: Error.tsx  Loading.tsx  Navbar.tsx  PrivateRoute.tsx  ProtectedRoute.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/pages/: Gallery.tsx  Home.tsx  Login.tsx  Register.tsx  Restore.tsx
frontend/src/services/: api.ts
