[tool.poetry]
name = "photo-restore"
version = "0.1.0"
description = "Photo restoration backend"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
Django = "5.0.2"
djangorestframework = "3.14.0"
djangorestframework-simplejwt = "5.3.1"
django-cors-headers = "4.3.1"
Pillow = "10.2.0"
python-dotenv = "1.0.1"
replicate = "0.22.0"
python-magic = "0.4.27"
gunicorn = "21.2.0"
whitenoise = "6.6.0"
drf-yasg = "1.21.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 